# clean-code-wizard-academy

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
src/app/: main.py
src/app/api/v1/: __init__.py
src/app/api/v1/assignments/: controller.py
src/app/api/v1/assignments/schemas/: response.py
src/app/api/v1/requests/: controller.py
src/app/core/: containers.py
src/app/core/bootstrap/: app.py  handlers.py  ioc.py  listeners.py  routers.py
src/app/core/config/: config.py
src/app/core/contracts/services/: report_service_interface.py  requests_service_interface.py
src/app/core/contracts/use_cases/: core.py  wizard_assignments_interface.py  wizard_requests_interface.py
src/app/core/enum/: response_status.py
src/app/core/repository/: __init__.py
src/app/core/repository/dynamodb/: base.py  repository.py
src/app/core/schemas/: exception.py
src/app/core/utils/: data_utils.py  datetime_utils.py
src/app/models/: core.py  request.py
src/app/models/mappers/: entity_mapper.py
src/app/models/view/: view_wizard_request.py
src/app/models/views/: view_wizard_request.py
src/app/services/mappers/: view_model_mapper.py
src/app/services/wizard/: report_service.py  requests_service.py
src/app/use_cases/: wizard_assignments.py  wizard_requests.py
src/app/use_cases/core/: base.py
src/tests/: conftest.py  mocks.py
src/tests/unit/core/: test_repository.py
src/tests/unit/models/: test_request.py
src/tests/unit/services/: test_report_service.py  test_requests_service.py
(+3 files in other folders)
